Hardening pass: governance, HAL seam, golden harness

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,5 @@
 [platformio]
-default_envs = teensy40_usbmidiserial
+default_envs = native
 src_dir = src
 include_dir = include
 lib_dir = lib
@@ -9,25 +9,36 @@ framework = arduino
 build_unflags = -std=gnu++11
 build_flags =
   -std=gnu++17
-  -D SEEDBOX_VERSION=\"$PIO SRC REV\"
+  -D SEEDBOX_VERSION=\"${PIO_SRC_REV}\"
   -D ARDUINOJSON_USE_DOUBLE=1
   -Wall -Wextra
 extra_scripts =
   pre:scripts/gen_version.py
-
 lib_deps =
-  teensy/Audio
-  teensy/OctoWS2811
-  teensy/Encoder
-  fortyseveneffects/MIDI Library@^6
-  bblanchon/ArduinoJson@^7
-  greiman/SdFat@^2
-  adafruit/Adafruit SSD1306
-  adafruit/Adafruit GFX Library
-  adafruit/Adafruit BusIO
+  teensy/Audio@1.59.0
+  teensy/OctoWS2811@1.5.0
+  teensy/Encoder@1.4.2
+  fortyseveneffects/MIDI Library@6.0.1
+  bblanchon/ArduinoJson@7.0.4
+  greiman/SdFat@2.2.3
+  adafruit/Adafruit SSD1306@2.5.9
+  adafruit/Adafruit GFX Library@1.11.10
+  adafruit/Adafruit BusIO@1.16.1
 
-[env:teensy40_usbmidiserial]
-platform = teensy
+[env:native]
+platform = native@5.1.1
+test_build_src = yes
+build_flags =
+  ${env.build_flags}
+  -D SEEDBOX_SIM=1
+  -D QUIET_MODE=1
+build_src_filter =
+  +<*>
+  -<io/UI*>
+  -<io/Leds*>
+
+[env:teensy40]
+platform = teensy@5.2.0
 board = teensy40
 board_build.usbtype = USB_MIDI_SERIAL
 monitor_speed = 115200
@@ -35,15 +46,8 @@ upload_protocol = teensy-cli
 build_flags =
   ${env.build_flags}
   -D SEEDBOX_HW=1
+  -D QUIET_MODE=0
   -D USB_MIDI
-
-[env:native]
-platform = native
-test_build_src = yes
-build_flags =
-  ${env.build_flags}
-  -D SEEDBOX_SIM=1
-build_src_filter =
-  +<*>
-  -<io/UI*>
-  -<io/Leds*>
+platform_packages =
+  framework-arduinoteensy@1.59.0
+lib_deps = ${env.lib_deps}
