--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,5 @@
 [platformio]
-default_envs = teensy40_usbmidiserial
+default_envs = native
 src_dir = src
 include_dir = include
 lib_dir = lib
@@ -12,34 +12,26 @@ build_flags =
   -D SEEDBOX_VERSION=\"$PIO SRC REV\"
   -D ARDUINOJSON_USE_DOUBLE=1
   -Wall -Wextra
+  -D QUIET_MODE=1
 extra_scripts =
   pre:scripts/gen_version.py
 
 lib_deps =
-  teensy/Audio
-  teensy/OctoWS2811
-  teensy/Encoder
-  fortyseveneffects/MIDI Library@^6
-  bblanchon/ArduinoJson@^7
-  greiman/SdFat@^2
-  adafruit/Adafruit SSD1306
-  adafruit/Adafruit GFX Library
-  adafruit/Adafruit BusIO
-
-[env:teensy40_usbmidiserial]
-platform = teensy
-board = teensy40
-board_build.usbtype = USB_MIDI_SERIAL
-monitor_speed = 115200
-upload_protocol = teensy-cli
-build_flags =
-  ${env.build_flags}
-  -D SEEDBOX_HW=1
-  -D USB_MIDI
+  teensy/Audio@=1.3
+  teensy/OctoWS2811@=1.5
+  teensy/Encoder@=1.4.3
+  fortyseveneffects/MIDI Library@=5.0.2
+  bblanchon/ArduinoJson@=7.4.2
+  greiman/SdFat@=2.3.1
+  adafruit/Adafruit SSD1306@=2.5.15
+  adafruit/Adafruit GFX Library@=1.12.3
+  adafruit/Adafruit BusIO@=1.17.4
 
 [env:native]
-platform = native
+platform = native@1.2.1
 test_build_src = yes
+platform_packages =
+  platformio/framework-arduino@3.20006.0
 build_flags =
   ${env.build_flags}
   -D SEEDBOX_SIM=1
@@ -47,3 +39,17 @@ build_src_filter =
   +<*>
   -<io/UI*>
   -<io/Leds*>
+
+[env:teensy40]
+platform = teensy@5.0.0
+board = teensy40
+framework = arduino
+platform_packages =
+  platformio/framework-arduinoteensy@~1.159.0
+board_build.usbtype = USB_MIDI_SERIAL
+monitor_speed = 115200
+upload_protocol = teensy-cli
+build_flags =
+  ${env.build_flags}
+  -D SEEDBOX_HW=1
+  -D USB_MIDI
