Fix native PlatformIO pinning

--- a/platformio.ini
+++ b/platformio.ini
@@ -5,11 +5,10 @@ include_dir = include
 lib_dir = lib
 
 [env]
-framework = arduino
 build_unflags = -std=gnu++11
 build_flags =
   -std=gnu++17
-  -D SEEDBOX_VERSION=\"$PIO SRC REV\"
+  -D SEEDBOX_VERSION=\"${PIO_SRC_REV}\"
   -D ARDUINOJSON_USE_DOUBLE=1
   -Wall -Wextra
   -D QUIET_MODE=1
@@ -30,8 +29,6 @@ lib_deps =
 [env:native]
 platform = native@1.2.1
 test_build_src = yes
-platform_packages =
-  platformio/framework-arduino@3.20006.0
 build_flags =
   ${env.build_flags}
   -D SEEDBOX_SIM=1
