--- a/platformio.ini
+++ b/platformio.ini
@@ -16,15 +16,7 @@ extra_scripts =
   pre:scripts/gen_version.py
 
 lib_deps =
-  teensy/Audio@=1.3
-  teensy/OctoWS2811@=1.5
-  teensy/Encoder@=1.4.3
-  fortyseveneffects/MIDI Library@=5.0.2
-  bblanchon/ArduinoJson@=7.4.2
-  greiman/SdFat@=2.3.1
-  adafruit/Adafruit SSD1306@=2.5.15
-  adafruit/Adafruit GFX Library@=1.12.3
-  adafruit/Adafruit BusIO@=1.17.4
+  bblanchon/ArduinoJson@7.4.2
 
 [env:native]
 platform = native@1.2.1
@@ -32,6 +24,8 @@ test_build_src = yes
 build_flags =
   ${env.build_flags}
   -D SEEDBOX_SIM=1
+lib_deps =
+  ${env.lib_deps}
 build_src_filter =
   +<*>
   -<io/UI*>
@@ -50,3 +44,13 @@ build_flags =
   ${env.build_flags}
   -D SEEDBOX_HW=1
   -D USB_MIDI
+lib_deps =
+  ${env.lib_deps}
+  teensy/Audio@1.3
+  teensy/OctoWS2811@1.5
+  teensy/Encoder@1.4.3
+  fortyseveneffects/MIDI Library@5.0.2
+  greiman/SdFat@2.3.1
+  adafruit/Adafruit SSD1306@2.5.15
+  adafruit/Adafruit GFX Library@1.12.3
+  adafruit/Adafruit BusIO@1.17.4
