--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,7 @@ build_flags =
   -D QUIET_MODE=1
 extra_scripts =
   pre:scripts/gen_version.py
+  pre:scripts/add_desktop_flag.py
 
 lib_deps =
   bblanchon/ArduinoJson@7.4.2
@@ -46,7 +47,7 @@ build_flags =
   -D USB_MIDI
 lib_deps =
   ${env.lib_deps}
-  teensy/Audio@1.3
+  teensy/Audio@1.3.0
   teensy/OctoWS2811@1.5
   teensy/Encoder@1.4.3
   fortyseveneffects/MIDI Library@5.0.2
