--- a/platformio.ini
+++ b/platformio.ini
@@ -47,9 +47,9 @@ build_flags =
   -D USB_MIDI
 lib_deps =
   ${env.lib_deps}
-  teensy/Audio@1.3.0
-  teensy/OctoWS2811@1.5
-  teensy/Encoder@1.4.3
+  PaulStoffregen/Audio@1.3
+  PaulStoffregen/OctoWS2811@1.5
+  PaulStoffregen/Encoder@1.4.3
   fortyseveneffects/MIDI Library@5.0.2
   greiman/SdFat@2.3.1
   adafruit/Adafruit SSD1306@2.5.15
