Fix Teensy deps and tidy scheduler indices

--- a/platformio.ini
+++ b/platformio.ini
@@ -45,6 +45,8 @@ build_flags =
   ${env.build_flags}
   -D SEEDBOX_HW=1
   -D USB_MIDI
+lib_ignore =
+  SdFat
 lib_deps =
   ${env.lib_deps}
   PaulStoffregen/Audio@1.3
