--- a/platformio.ini
+++ b/platformio.ini
@@ -45,6 +45,9 @@ build_flags =
   ${env.build_flags}
   -D SEEDBOX_HW=1
   -D USB_MIDI
+  -I$PROJECT_PACKAGES_DIR/framework-arduinoteensy/libraries/SdFat/src
+lib_extra_dirs =
+  $PROJECT_PACKAGES_DIR/framework-arduinoteensy/libraries
 lib_ignore =
   SdFat
 lib_deps =
