Hush Teensy header warnings

--- a/platformio.ini
+++ b/platformio.ini
@@ -46,6 +46,8 @@ build_flags =
   -D SEEDBOX_HW=1
   -D USB_MIDI
   -I$PROJECT_PACKAGES_DIR/framework-arduinoteensy/libraries/SD/src
+  -Wno-cast-function-type
+  -Wno-deprecated-copy
 lib_extra_dirs =
   $PROJECT_PACKAGES_DIR/framework-arduinoteensy/libraries
 lib_deps =
