--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        env: [native, teensy40]
+        env: [native, teensy40_usbmidiserial]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
