--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,7 @@ build_flags =
   -std=gnu++17
   -D SEEDBOX_VERSION=\"$PIO SRC REV\"
   -D ARDUINOJSON_USE_DOUBLE=1
+  -D QUIET_MODE=1
   -Wall -Wextra
 extra_scripts =
   pre:scripts/gen_version.py
@@ -43,6 +44,7 @@ test_build_src = yes
 build_flags =
   ${env.build_flags}
   -D SEEDBOX_SIM=1
+  -D QUIET_MODE=0
 build_src_filter =
   +<*>
   -<io/UI*>
