--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,5 @@
 [platformio]
-default_envs = teensy40_usbmidiserial
+default_envs = teensy40
 src_dir = src
 include_dir = include
 lib_dir = lib
@@ -26,7 +26,19 @@ lib_deps =
   adafruit/Adafruit GFX Library
   adafruit/Adafruit BusIO
 
+[env:teensy40]
+platform = teensy
+board = teensy40
+board_build.usbtype = USB_MIDI_SERIAL
+monitor_speed = 115200
+upload_protocol = teensy-cli
+build_flags =
+  ${env.build_flags}
+  -D SEEDBOX_HW=1
+  -D USB_MIDI
+
 [env:teensy40_usbmidiserial]
+; Legacy alias so older docs/scripts keep working. Prefer `teensy40`.
 platform = teensy
 board = teensy40
 board_build.usbtype = USB_MIDI_SERIAL
