--- a/platformio.ini
+++ b/platformio.ini
@@ -4,6 +4,18 @@ src_dir = src
 include_dir = include
 lib_dir = lib
 
+[common]
+teensy_libs =
+  paulstoffregen/Audio@1.3
+  paulstoffregen/OctoWS2811@1.5
+  paulstoffregen/Encoder@1.4.3
+  fortyseveneffects/MIDI Library@5.0.2
+  bblanchon/ArduinoJson@7.4.2
+  greiman/SdFat@2.3.1
+  adafruit/Adafruit SSD1306@2.5.15
+  adafruit/Adafruit GFX Library@1.12.3
+  adafruit/Adafruit BusIO@1.17.4
+
 [env:native]
 platform = native@1.2.1
 build_unflags = -std=gnu++11
@@ -22,17 +34,6 @@ build_src_filter =
   -<io/UI*>
   -<io/Leds*>
 
-lib_deps =
-  teensy/Audio
-  teensy/OctoWS2811
-  teensy/Encoder
-  fortyseveneffects/MIDI Library@^6
-  bblanchon/ArduinoJson@^7
-  greiman/SdFat@^2
-  adafruit/Adafruit SSD1306
-  adafruit/Adafruit GFX Library
-  adafruit/Adafruit BusIO
-
 [env:teensy40]
 platform = teensy
 board = teensy40
@@ -43,6 +44,7 @@ build_flags =
   ${env.build_flags}
   -D SEEDBOX_HW=1
   -D USB_MIDI
+lib_deps = ${common.teensy_libs}
 
 [env:teensy40_usbmidiserial]
 ; Legacy alias so older docs/scripts keep working. Prefer `teensy40`.
@@ -61,13 +63,4 @@ build_flags =
   -D USB_MIDI
 extra_scripts =
   pre:scripts/gen_version.py
-lib_deps =
-  teensy/Audio@1.3
-  teensy/OctoWS2811@1.5
-  teensy/Encoder@1.4.3
-  fortyseveneffects/MIDI Library@5.0.2
-  bblanchon/ArduinoJson@7.4.2
-  greiman/SdFat@2.3.1
-  adafruit/Adafruit SSD1306@2.5.15
-  adafruit/Adafruit GFX Library@1.12.3
-  adafruit/Adafruit BusIO@1.17.4
+lib_deps = ${common.teensy_libs}
