Fix Teensy PlatformIO config to use Arduino framework

--- a/platformio.ini
+++ b/platformio.ini
@@ -36,6 +36,7 @@ build_src_filter =
 
 [env:teensy40]
 platform = teensy
+framework = arduino
 board = teensy40
 board_build.usbtype = USB_MIDI_SERIAL
 monitor_speed = 115200
@@ -49,6 +50,7 @@ lib_deps = ${common.teensy_libs}
 [env:teensy40_usbmidiserial]
 ; Legacy alias so older docs/scripts keep working. Prefer `teensy40`.
 platform = teensy
+framework = arduino
 board = teensy40
 board_build.usbtype = USB_MIDI_SERIAL
 monitor_speed = 115200
