--- a/platformio.ini
+++ b/platformio.ini
@@ -43,6 +43,10 @@ upload_protocol = teensy-cli
 build_flags =
   ${env.build_flags}
   -D SEEDBOX_HW=1
+  -D ARDUINO_TEENSY40=1
+  -D TEENSYDUINO=158
+  -D __ARM_ARCH_7EM__=1
+  -D __IMXRT1062__=1
   -D USB_MIDI
 lib_deps = ${common.teensy_libs}
 
@@ -61,6 +65,10 @@ build_flags =
   -D ARDUINOJSON_USE_DOUBLE=1
   -Wall -Wextra
   -D SEEDBOX_HW=1
+  -D ARDUINO_TEENSY40=1
+  -D TEENSYDUINO=158
+  -D __ARM_ARCH_7EM__=1
+  -D __IMXRT1062__=1
   -D USB_MIDI
 extra_scripts =
   pre:scripts/gen_version.py
