Force-include Teensy ID shim to keep audio graph concrete

--- a/platformio.ini
+++ b/platformio.ini
@@ -43,11 +43,8 @@ upload_protocol = teensy-cli
 build_flags =
   ${env.build_flags}
   -D SEEDBOX_HW=1
-  -D ARDUINO_TEENSY40=1
-  -D TEENSYDUINO=158
-  -D __ARM_ARCH_7EM__=1
-  -D __IMXRT1062__=1
   -D USB_MIDI
+  -include include/SeedboxTeensyCompat.h
 lib_deps = ${common.teensy_libs}
 
 [env:teensy40_usbmidiserial]
@@ -65,11 +62,8 @@ build_flags =
   -D ARDUINOJSON_USE_DOUBLE=1
   -Wall -Wextra
   -D SEEDBOX_HW=1
-  -D ARDUINO_TEENSY40=1
-  -D TEENSYDUINO=158
-  -D __ARM_ARCH_7EM__=1
-  -D __IMXRT1062__=1
   -D USB_MIDI
+  -include include/SeedboxTeensyCompat.h
 extra_scripts =
   pre:scripts/gen_version.py
 lib_deps = ${common.teensy_libs}
