--- a/platformio.ini
+++ b/platformio.ini
@@ -44,6 +44,8 @@ build_flags =
   ${env.build_flags}
   -D SEEDBOX_HW=1
   -D USB_MIDI
+extra_scripts =
+  pre:scripts/ensure_teensy_macros.py
 lib_deps = ${common.teensy_libs}
 
 [env:teensy40_usbmidiserial]
@@ -64,4 +66,5 @@ build_flags =
   -D USB_MIDI
 extra_scripts =
   pre:scripts/gen_version.py
+  pre:scripts/ensure_teensy_macros.py
 lib_deps = ${common.teensy_libs}
