Define Teensy macros for hardware builds

--- a/platformio.ini
+++ b/platformio.ini
@@ -42,6 +42,10 @@ monitor_speed = 115200
 upload_protocol = teensy-cli
 build_flags =
   ${env.build_flags}
+  -D ARDUINO_TEENSY40=1
+  -D TEENSYDUINO=158
+  -D __ARM_ARCH_7EM__=1
+  -D __IMXRT1062__=1
   -D SEEDBOX_HW=1
   -D USB_MIDI
 lib_deps = ${common.teensy_libs}
@@ -60,6 +64,10 @@ build_flags =
   -D SEEDBOX_VERSION=\"${PIO_SRC_REV}\"
   -D ARDUINOJSON_USE_DOUBLE=1
   -Wall -Wextra
+  -D ARDUINO_TEENSY40=1
+  -D TEENSYDUINO=158
+  -D __ARM_ARCH_7EM__=1
+  -D __IMXRT1062__=1
   -D SEEDBOX_HW=1
   -D USB_MIDI
 extra_scripts =
