--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,37 +37,35 @@ jobs:
         if: ${{ matrix.usb != '' }}
         run: |
           python - <<'PY'
-          import json
-          import subprocess
+          from configparser import ConfigParser
+          from pathlib import Path
           import sys
 
           env = "${{ matrix.env }}"
           expected = "${{ matrix.usb }}"
 
-          result = subprocess.run(
-              [
-                  "pio",
-                  "project",
-                  "config",
-                  "--json-output",
-                  "--environment",
-                  env,
-              ],
-              check=True,
-              capture_output=True,
-              text=True,
-          )
-          config = json.loads(result.stdout)
-          usb_value = None
-          for entry in config:
-              if entry.get("option") == "board_build.usbtype":
-                  usb_value = entry.get("value")
-                  break
+          config = ConfigParser(allow_no_value=True, strict=False)
+          config.optionxform = str
 
+          ini_path = Path("platformio.ini")
+          if not ini_path.exists():
+              print("platformio.ini not found", file=sys.stderr)
+              sys.exit(1)
+
+          with ini_path.open() as ini_file:
+              config.read_file(ini_file)
+
+          section = f"env:{env}"
+          if section not in config:
+              print(f"Environment section {section} missing", file=sys.stderr)
+              sys.exit(1)
+
+          usb_value = config[section].get("board_build.usbtype")
           if usb_value is None:
               print(f"No USB type configured for {env}", file=sys.stderr)
               sys.exit(1)
 
+          usb_value = usb_value.strip()
           if usb_value != expected:
               print(
                   f"USB type mismatch for {env}: expected {expected}, found {usb_value}",
