--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@ teensy_libs =
   paulstoffregen/Encoder@1.4.2
   fortyseveneffects/MIDI Library@5.0.2
   bblanchon/ArduinoJson@7.4.2
-  adafruit/Adafruit SSD1306@2.5.15
+  adafruit/Adafruit SH110X@2.1.14
   adafruit/Adafruit GFX Library@1.12.3
   adafruit/Adafruit BusIO@1.17.4
 
