--- a/platformio.ini
+++ b/platformio.ini
@@ -44,6 +44,7 @@ build_flags =
   -D SEEDBOX_HW=1
   -D USB_MIDI
 lib_deps = ${common.teensy_libs}
+check_skip_packages = yes
 
 [env:teensy40_usbmidiserial]
 ; Legacy alias so older docs/scripts keep working. Prefer `teensy40`.
@@ -64,3 +65,4 @@ build_flags =
 extra_scripts =
   pre:scripts/gen_version.py
 lib_deps = ${common.teensy_libs}
+check_skip_packages = yes
