Tighten cppcheck scope and document lint expectations

--- a/platformio.ini
+++ b/platformio.ini
@@ -45,6 +45,16 @@ build_flags =
   -D USB_MIDI
 lib_deps = ${common.teensy_libs}
 check_skip_packages = yes
+; cppcheck likes to wander into .pio caches unless we fence it in.  This keeps
+; the analyzer focused on our actual firmware sources and headers instead of
+; vendored dependencies that we don't control.
+check_src_filter =
+  +<src/*>
+  +<include/*>
+  -<.pio/*>
+  -<lib/*>
+  -<tests/*>
+  -<test/*>
 
 [env:teensy40_usbmidiserial]
 ; Legacy alias so older docs/scripts keep working. Prefer `teensy40`.
@@ -66,3 +76,4 @@ extra_scripts =
   pre:scripts/gen_version.py
 lib_deps = ${common.teensy_libs}
 check_skip_packages = yes
+check_src_filter = ${env:teensy40.check_src_filter}
