--- a/platformio.ini
+++ b/platformio.ini
@@ -47,14 +47,17 @@ lib_deps = ${common.teensy_libs}
 check_skip_packages = yes
 ; cppcheck likes to wander into .pio caches unless we fence it in.  This keeps
 ; the analyzer focused on our actual firmware sources and headers instead of
-; vendored dependencies that we don't control.
-check_src_filter =
-  +<src/*>
-  +<include/*>
-  -<.pio/*>
-  -<lib/*>
-  -<tests/*>
-  -<test/*>
+; vendored dependencies that we don't control.  Newer PlatformIO versions have
+; dropped support for `check_src_filter`, so use explicit allow/deny patterns
+; instead.
+check_patterns =
+  src/**
+  include/**
+check_ignore =
+  .pio/**
+  lib/**
+  tests/**
+  test/**
 
 [env:teensy40_usbmidiserial]
 ; Legacy alias so older docs/scripts keep working. Prefer `teensy40`.
@@ -76,4 +79,5 @@ extra_scripts =
   pre:scripts/gen_version.py
 lib_deps = ${common.teensy_libs}
 check_skip_packages = yes
-check_src_filter = ${env:teensy40.check_src_filter}
+check_patterns = ${env:teensy40.check_patterns}
+check_ignore = ${env:teensy40.check_ignore}
