--- a/platformio.ini
+++ b/platformio.ini
@@ -48,9 +48,9 @@ check_skip_packages = yes
 ; cppcheck likes to wander into .pio caches unless we fence it in.  This keeps
 ; the analyzer focused on our actual firmware sources and headers instead of
 ; vendored dependencies that we don't control.  The old `check_patterns`
-; setting is gone, so we lean on `check_src_filters` with explicit
+; setting is gone, so we lean on `check_src_filter` with explicit
 ; allow/deny-style globs.
-check_src_filters =
+check_src_filter =
   +<src/**>
   +<include/**>
   -<.pio/**>
@@ -78,4 +78,4 @@ extra_scripts =
   pre:scripts/gen_version.py
 lib_deps = ${common.teensy_libs}
 check_skip_packages = yes
-check_src_filters = ${env:teensy40.check_src_filters}
+check_src_filter = ${env:teensy40.check_src_filter}
