--- a/platformio.ini
+++ b/platformio.ini
@@ -24,6 +24,8 @@ build_flags =
   -D QUIET_MODE=0
   -Wall -Wextra
   -D SEEDBOX_SIM=1
+lib_deps =
+  bblanchon/ArduinoJson@7.4.2
 extra_scripts =
   pre:scripts/gen_version.py
 test_build_src = yes
