--- a/platformio.ini
+++ b/platformio.ini
@@ -18,6 +18,8 @@ teensy_libs =
 platform = native@1.2.1
 build_unflags = -std=gnu++11
 build_flags =
+  ; Force every build to see include/SeedBoxConfig.h so defaults stay unified.
+  -include include/SeedBoxConfig.h
   -std=gnu++17
   -D SEEDBOX_VERSION=\"${PIO_SRC_REV}\"
   -D ARDUINOJSON_USE_DOUBLE=1
@@ -41,6 +43,8 @@ monitor_speed = 115200
 upload_protocol = teensy-cli
 build_flags =
   ${env.build_flags}
+  ; Force every build to see include/SeedBoxConfig.h so defaults stay unified.
+  -include include/SeedBoxConfig.h
   -D SEEDBOX_HW=1
   -D USB_MIDI
 lib_deps = ${common.teensy_libs}
@@ -72,6 +76,8 @@ build_flags =
   -D SEEDBOX_VERSION=\"${PIO_SRC_REV}\"
   -D ARDUINOJSON_USE_DOUBLE=1
   -Wall -Wextra
+  ; Force every build to see include/SeedBoxConfig.h so defaults stay unified.
+  -include include/SeedBoxConfig.h
   -D SEEDBOX_HW=1
   -D USB_MIDI
 extra_scripts =
