--- a/platformio.ini
+++ b/platformio.ini
@@ -36,6 +36,29 @@ build_src_filter =
   -<io/UI*>
   -<io/Leds*>
 
+[env:native_golden]
+platform = native@1.2.1
+build_unflags = -std=gnu++11
+build_flags =
+  ; Clone the native env defaults but force golden capture on.
+  -include include/SeedBoxConfig.h
+  -std=gnu++17
+  -D SEEDBOX_VERSION=\"${PIO_SRC_REV}\"
+  -D ARDUINOJSON_USE_DOUBLE=1
+  -D QUIET_MODE=0
+  -Wall -Wextra
+  -D SEEDBOX_SIM=1
+  -D ENABLE_GOLDEN=1
+lib_deps =
+  bblanchon/ArduinoJson@7.4.2
+extra_scripts =
+  pre:scripts/gen_version.py
+test_build_src = yes
+build_src_filter =
+  +<*>
+  -<io/UI*>
+  -<io/Leds*>
+
 [env:teensy40]
 platform = teensy
 framework = arduino
