--- a/platformio.ini
+++ b/platformio.ini
@@ -26,6 +26,7 @@ build_flags =
   -D QUIET_MODE=0
   -Wall -Wextra
   -D SEEDBOX_SIM=1
+  -D SEEDBOX_PROJECT_ROOT_HINT=\"${PROJECT_DIR}\"
 lib_deps =
   bblanchon/ArduinoJson@7.4.2
 extra_scripts =
@@ -49,6 +50,7 @@ build_flags =
   -Wall -Wextra
   -D SEEDBOX_SIM=1
   -D ENABLE_GOLDEN=1
+  -D SEEDBOX_PROJECT_ROOT_HINT=\"${PROJECT_DIR}\"
 lib_deps =
   bblanchon/ArduinoJson@7.4.2
 extra_scripts =
