Consolidate tests under tests/ and refresh docs

--- a/platformio.ini
+++ b/platformio.ini
@@ -3,6 +3,7 @@ default_envs = teensy40
 src_dir = src
 include_dir = include
 lib_dir = lib
+test_dir = tests
 
 [common]
 teensy_libs =
@@ -87,7 +88,6 @@ check_src_filters =
   -<.pio/**>
   -<lib/**>
   -<tests/**>
-  -<test/**>
 
 [env:teensy40_usbmidiserial]
 ; Legacy alias so older docs/scripts keep working. Prefer `teensy40`.
