--- a/.github/workflows/juce-desktop.yml
+++ b/.github/workflows/juce-desktop.yml
@@ -11,7 +11,7 @@ env:
 jobs:
   macos-universal:
     name: macOS universal VST3 + app
-    runs-on: macos-13
+    runs-on: macos-15-intel
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -72,7 +72,7 @@ jobs:
             libxinerama-dev \
             libxext-dev \
             libfreetype6-dev \
-            libwebkit2gtk-4.0-dev \
+            libwebkit2gtk-4.1-dev \
             libcurl4-openssl-dev \
             libasound2-dev
 
@@ -91,12 +91,14 @@ jobs:
   windows-host:
     name: Windows dependency + JUCE sanity
     runs-on: windows-latest
-    env:
-      CC: cl.exe
-      CXX: cl.exe
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
+
+      - name: Set up MSVC developer command prompt
+        uses: ilammy/msvc-dev-cmd@v1
+        with:
+          arch: x64
 
       - name: Install Ninja
         run: choco install ninja --no-progress
