--- a/.github/workflows/juce-desktop.yml
+++ b/.github/workflows/juce-desktop.yml
@@ -11,7 +11,7 @@ env:
 jobs:
   macos-universal:
     name: macOS universal VST3 + app
-    runs-on: macos-15-intel
+    runs-on: macos-14
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -71,6 +71,12 @@ jobs:
             libx11-dev \
             libxinerama-dev \
             libxext-dev \
+            libxrandr-dev \
+            libxcomposite-dev \
+            libxdamage-dev \
+            libxfixes-dev \
+            libxcursor-dev \
+            libgtk-3-dev \
             libfreetype6-dev \
             libwebkit2gtk-4.1-dev \
             libcurl4-openssl-dev \
