Fix JUCE host build guardrails

--- a/.github/workflows/juce-desktop.yml
+++ b/.github/workflows/juce-desktop.yml
@@ -68,6 +68,7 @@ jobs:
             clang \
             ninja-build \
             cmake \
+            pkg-config \
             libx11-dev \
             libxinerama-dev \
             libxext-dev \
