--- a/.github/workflows/juce-desktop.yml
+++ b/.github/workflows/juce-desktop.yml
@@ -28,6 +28,7 @@ jobs:
             -DSEEDBOX_SIM=ON \
             -DQUIET_MODE=ON \
             -DSEEDBOX_VERSION="${{ github.sha }}" \
+            -DJUCE_VST3_CAN_REPLACE_VST2=OFF \
             -DCMAKE_BUILD_TYPE=${BUILD_TYPE} \
             -DCMAKE_OSX_ARCHITECTURES="x86_64;arm64" \
             -DCMAKE_OSX_DEPLOYMENT_TARGET=11.0
@@ -118,6 +119,7 @@ jobs:
             -DSEEDBOX_SIM=ON \
             -DQUIET_MODE=ON \
             -DSEEDBOX_VERSION="${{ github.sha }}" \
+            -DJUCE_VST3_CAN_REPLACE_VST2=OFF \
             -DCMAKE_BUILD_TYPE=${BUILD_TYPE} \
             -DCMAKE_CXX_FLAGS_INIT="${GTK_WEBKIT_CFLAGS}" \
             -DCMAKE_EXE_LINKER_FLAGS_INIT="${GTK_WEBKIT_LIBS} ${CURL_LIBS}" \
@@ -149,6 +151,7 @@ jobs:
             -DSEEDBOX_SIM=ON `
             -DQUIET_MODE=ON `
             -DSEEDBOX_VERSION="${{ github.sha }}" `
+            -DJUCE_VST3_CAN_REPLACE_VST2=OFF `
             -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}
 
       - name: Build Windows targets
