--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -135,6 +135,7 @@ target_compile_definitions(SeedboxVST3 PRIVATE
   ${SEEDBOX_COMPILE_DEFINITIONS}
   JUCE_VST3_CAN_REPLACE_VST2=0
   JUCE_PLUGINHOST_VST=0
+  JUCE_USE_CURL=0
 )
 
 target_link_libraries(SeedboxVST3
@@ -163,6 +164,7 @@ set_target_properties(SeedboxVST3_VST3 PROPERTIES
 target_compile_definitions(SeedboxVST3_VST3 PRIVATE
   JUCE_VST3_CAN_REPLACE_VST2=0
   JUCE_PLUGINHOST_VST=0
+  JUCE_USE_CURL=0
 )
 
 juce_add_gui_app(SeedboxApp PRODUCT_NAME "SeedBox Standalone")
@@ -174,7 +176,9 @@ target_include_directories(SeedboxApp PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/include
   ${CMAKE_CURRENT_SOURCE_DIR}/src
 )
-target_compile_definitions(SeedboxApp PRIVATE ${SEEDBOX_COMPILE_DEFINITIONS})
+target_compile_definitions(SeedboxApp PRIVATE
+  ${SEEDBOX_COMPILE_DEFINITIONS}
+  JUCE_USE_CURL=0)
 
 target_link_libraries(SeedboxApp
   PRIVATE
