--- a/.github/workflows/juce-desktop.yml
+++ b/.github/workflows/juce-desktop.yml
@@ -156,13 +156,13 @@ jobs:
             exit 1
           fi
           rsync -a "$VST3_BUNDLE" artifacts/linux/
-          APP_BINARY=$(find build/juce/SeedboxApp_artefacts -maxdepth 6 -type f -executable -name "SeedBox" -print -quit)
+          APP_BINARY=$(find build/juce/SeedboxApp_artefacts -maxdepth 6 -type f -executable \( -name "SeedBox Standalone" -o -name "SeedBox" \) -print -quit)
           if [[ -z "$APP_BINARY" ]]; then
             echo "SeedBox standalone binary not found under build/juce/SeedboxApp_artefacts" >&2
             find build/juce/SeedboxApp_artefacts -maxdepth 6 -print
             exit 1
           fi
-          install -m 755 "$APP_BINARY" artifacts/linux/SeedBox
+          install -m 755 "$APP_BINARY" "artifacts/linux/$(basename "$APP_BINARY")"
 
       - name: Upload Linux bundle
         uses: actions/upload-artifact@v4
@@ -213,11 +213,11 @@ jobs:
           }
           Copy-Item -Path $vst3Bundle.FullName -Destination "artifacts/windows" -Recurse -Force
 
-          $appBinary = Get-ChildItem -Path build/juce/SeedboxApp_artefacts -Recurse -File -Filter "SeedBox.exe" | Select-Object -First 1
+          $appBinary = Get-ChildItem -Path build/juce/SeedboxApp_artefacts -Recurse -File -Include "SeedBox Standalone.exe","SeedBox.exe" | Select-Object -First 1
           if (-not $appBinary) {
-            Write-Error "SeedBox.exe not found under build/juce/SeedboxApp_artefacts"
+            Write-Error "SeedBox Standalone.exe or SeedBox.exe not found under build/juce/SeedboxApp_artefacts"
           }
-          Copy-Item -Path $appBinary.FullName -Destination "artifacts/windows/SeedBox.exe" -Force
+          Copy-Item -Path $appBinary.FullName -Destination (Join-Path "artifacts/windows" $appBinary.Name) -Force
 
       - name: Upload Windows bundle
         uses: actions/upload-artifact@v4
