--- a/.github/workflows/juce-desktop.yml
+++ b/.github/workflows/juce-desktop.yml
@@ -83,22 +83,24 @@ jobs:
           fi
           rsync -a "$APP_BUNDLE" "artifacts/macos/SeedBox Standalone.app"
 
+      - name: Archive macOS artifacts
+        run: tar -czf artifacts/seedbox-macos-universal.tar.gz -C artifacts macos
+
+      - name: Note missing signing key (macOS)
+        if: ${{ secrets.GPG_PRIVATE_KEY == '' }}
+        run: echo "::notice::Skipping macOS signing: GPG_PRIVATE_KEY is not configured for this run."
+
       - name: Import signing key
+        if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
         env:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
-        run: |
-          if [[ -z "$GPG_PRIVATE_KEY" ]]; then
-            echo "::error::GPG_PRIVATE_KEY secret is missing; cannot sign macOS artifacts." >&2
-            exit 1
-          fi
-          echo "$GPG_PRIVATE_KEY" | gpg --batch --import
+        run: echo "$GPG_PRIVATE_KEY" | gpg --batch --import
 
-      - name: Archive and sign macOS artifacts
+      - name: Sign macOS artifacts
+        if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
         env:
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
-        run: |
-          tar -czf artifacts/seedbox-macos-universal.tar.gz -C artifacts macos
-          gpg --batch --yes --pinentry-mode loopback --passphrase "${GPG_PASSPHRASE}" --local-user 4473F115745A1A61 --detach-sign artifacts/seedbox-macos-universal.tar.gz
+        run: gpg --batch --yes --pinentry-mode loopback --passphrase "${GPG_PASSPHRASE}" --local-user 4473F115745A1A61 --detach-sign artifacts/seedbox-macos-universal.tar.gz
 
       - name: Upload macOS universal bundle
         uses: actions/upload-artifact@v4
@@ -107,7 +109,14 @@ jobs:
           path: |
             artifacts/macos
             artifacts/seedbox-macos-universal.tar.gz
-            artifacts/seedbox-macos-universal.tar.gz.sig
+          if-no-files-found: error
+
+      - name: Upload macOS signature
+        if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: seedbox-macos-universal
+          path: artifacts/seedbox-macos-universal.tar.gz.sig
           if-no-files-found: error
 
   linux-host:
@@ -185,22 +194,24 @@ jobs:
           fi
           install -m 755 "$APP_BINARY" "artifacts/linux/$(basename "$APP_BINARY")"
 
+      - name: Archive Linux artifacts
+        run: tar -czf artifacts/seedbox-linux-host.tar.gz -C artifacts linux
+
+      - name: Note missing signing key (Linux)
+        if: ${{ secrets.GPG_PRIVATE_KEY == '' }}
+        run: echo "::notice::Skipping Linux signing: GPG_PRIVATE_KEY is not configured for this run."
+
       - name: Import signing key
+        if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
         env:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
-        run: |
-          if [[ -z "$GPG_PRIVATE_KEY" ]]; then
-            echo "::error::GPG_PRIVATE_KEY secret is missing; cannot sign Linux artifacts." >&2
-            exit 1
-          fi
-          echo "$GPG_PRIVATE_KEY" | gpg --batch --import
+        run: echo "$GPG_PRIVATE_KEY" | gpg --batch --import
 
-      - name: Archive and sign Linux artifacts
+      - name: Sign Linux artifacts
+        if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
         env:
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
-        run: |
-          tar -czf artifacts/seedbox-linux-host.tar.gz -C artifacts linux
-          gpg --batch --yes --pinentry-mode loopback --passphrase "${GPG_PASSPHRASE}" --local-user 4473F115745A1A61 --detach-sign artifacts/seedbox-linux-host.tar.gz
+        run: gpg --batch --yes --pinentry-mode loopback --passphrase "${GPG_PASSPHRASE}" --local-user 4473F115745A1A61 --detach-sign artifacts/seedbox-linux-host.tar.gz
 
       - name: Upload Linux bundle
         uses: actions/upload-artifact@v4
@@ -209,7 +220,14 @@ jobs:
           path: |
             artifacts/linux
             artifacts/seedbox-linux-host.tar.gz
-            artifacts/seedbox-linux-host.tar.gz.sig
+          if-no-files-found: error
+
+      - name: Upload Linux signature
+        if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: seedbox-linux-host
+          path: artifacts/seedbox-linux-host.tar.gz.sig
           if-no-files-found: error
 
   windows-host:
@@ -263,26 +281,30 @@ jobs:
           }
           Copy-Item -Path $appBinary.FullName -Destination (Join-Path "artifacts/windows" $appBinary.Name) -Force
 
+      - name: Archive Windows artifacts
+        shell: pwsh
+        run: |
+          $ErrorActionPreference = "Stop"
+          Compress-Archive -Path "artifacts/windows/*" -DestinationPath "artifacts/seedbox-windows-host.zip" -Force
+
+      - name: Note missing signing key (Windows)
+        if: ${{ secrets.GPG_PRIVATE_KEY == '' }}
+        shell: pwsh
+        run: echo "::notice::Skipping Windows signing: GPG_PRIVATE_KEY is not configured for this run."
+
       - name: Import signing key
+        if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
         shell: pwsh
         env:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
-        run: |
-          $ErrorActionPreference = "Stop"
-          if (-not $env:GPG_PRIVATE_KEY) {
-            Write-Error "GPG_PRIVATE_KEY secret is missing; cannot sign Windows artifacts."
-          }
-          $env:GPG_PRIVATE_KEY | gpg --batch --import
+        run: $env:GPG_PRIVATE_KEY | gpg --batch --import
 
-      - name: Archive and sign Windows artifacts
+      - name: Sign Windows artifacts
+        if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
         shell: pwsh
         env:
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
-        run: |
-          $ErrorActionPreference = "Stop"
-          $archivePath = "artifacts/seedbox-windows-host.zip"
-          Compress-Archive -Path "artifacts/windows/*" -DestinationPath $archivePath -Force
-          gpg --batch --yes --pinentry-mode loopback --passphrase "$env:GPG_PASSPHRASE" --local-user 4473F115745A1A61 --detach-sign $archivePath
+        run: gpg --batch --yes --pinentry-mode loopback --passphrase "$env:GPG_PASSPHRASE" --local-user 4473F115745A1A61 --detach-sign "artifacts/seedbox-windows-host.zip"
 
       - name: Upload Windows bundle
         uses: actions/upload-artifact@v4
@@ -291,5 +313,12 @@ jobs:
           path: |
             artifacts/windows
             artifacts/seedbox-windows-host.zip
-            artifacts/seedbox-windows-host.zip.sig
+          if-no-files-found: error
+
+      - name: Upload Windows signature
+        if: ${{ secrets.GPG_PRIVATE_KEY != '' }}
+        uses: actions/upload-artifact@v4
+        with:
+          name: seedbox-windows-host
+          path: artifacts/seedbox-windows-host.zip.sig
           if-no-files-found: error
