Surface CMake flag state and document shell pitfalls

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,8 @@ set(SEEDBOX_COMPILE_DEFINITIONS
   SEEDBOX_VERSION=\"${SEEDBOX_VERSION}\"
 )
 
+message(STATUS "SeedBox flags -> HW:${SEEDBOX_HW_VALUE} SIM:${SEEDBOX_SIM_VALUE} JUCE:${SEEDBOX_JUCE_VALUE} QUIET:${QUIET_MODE_VALUE} GOLDEN:${ENABLE_GOLDEN_VALUE}")
+
 file(GLOB_RECURSE SEEDBOX_CORE_SOURCES CONFIGURE_DEPENDS
   ${CMAKE_CURRENT_SOURCE_DIR}/src/app/*.cpp
   ${CMAKE_CURRENT_SOURCE_DIR}/src/engine/*.cpp
