Add seed prime bypass mode and focused reseed toggle

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ option(SEEDBOX_HW "Toggle Teensy-specific hardware paths" OFF)
 option(SEEDBOX_SIM "Enable simulator-friendly shims" ON)
 option(SEEDBOX_JUCE "Mark this build as JUCE-driven" ON)
 option(QUIET_MODE "Mute serial/MIDI chatter for host builds" ON)
+option(SEED_PRIME_BYPASS "Skip auto-priming four seeds; only focus slot fills" OFF)
 option(ENABLE_GOLDEN "Enable golden artifact emission" OFF)
 option(SEEDBOX_DEBUG_CLOCK_SOURCE "Verbose clock debug toggles" OFF)
 option(SEEDBOX_DEBUG_UI "Verbose UI debug toggles" OFF)
@@ -45,6 +46,7 @@ bool_to_flag(SEEDBOX_HW SEEDBOX_HW_VALUE)
 bool_to_flag(SEEDBOX_SIM SEEDBOX_SIM_VALUE)
 bool_to_flag(SEEDBOX_JUCE SEEDBOX_JUCE_VALUE)
 bool_to_flag(QUIET_MODE QUIET_MODE_VALUE)
+bool_to_flag(SEED_PRIME_BYPASS SEED_PRIME_BYPASS_VALUE)
 bool_to_flag(ENABLE_GOLDEN ENABLE_GOLDEN_VALUE)
 bool_to_flag(SEEDBOX_DEBUG_CLOCK_SOURCE SEEDBOX_DEBUG_CLOCK_SOURCE_VALUE)
 bool_to_flag(SEEDBOX_DEBUG_UI SEEDBOX_DEBUG_UI_VALUE)
@@ -55,6 +57,7 @@ set(SEEDBOX_COMPILE_DEFINITIONS
   SEEDBOX_SIM=${SEEDBOX_SIM_VALUE}
   SEEDBOX_JUCE=${SEEDBOX_JUCE_VALUE}
   QUIET_MODE=${QUIET_MODE_VALUE}
+  SEED_PRIME_BYPASS=${SEED_PRIME_BYPASS_VALUE}
   ENABLE_GOLDEN=${ENABLE_GOLDEN_VALUE}
   SEEDBOX_DEBUG_CLOCK_SOURCE=${SEEDBOX_DEBUG_CLOCK_SOURCE_VALUE}
   SEEDBOX_DEBUG_UI=${SEEDBOX_DEBUG_UI_VALUE}
@@ -63,7 +66,7 @@ set(SEEDBOX_COMPILE_DEFINITIONS
   SEEDBOX_VERSION=\"${SEEDBOX_VERSION}\"
 )
 
-message(STATUS "SeedBox flags -> HW:${SEEDBOX_HW_VALUE} SIM:${SEEDBOX_SIM_VALUE} JUCE:${SEEDBOX_JUCE_VALUE} QUIET:${QUIET_MODE_VALUE} GOLDEN:${ENABLE_GOLDEN_VALUE}")
+message(STATUS "SeedBox flags -> HW:${SEEDBOX_HW_VALUE} SIM:${SEEDBOX_SIM_VALUE} JUCE:${SEEDBOX_JUCE_VALUE} QUIET:${QUIET_MODE_VALUE} PRIME_BYPASS:${SEED_PRIME_BYPASS_VALUE} GOLDEN:${ENABLE_GOLDEN_VALUE}")
 
 file(GLOB_RECURSE SEEDBOX_CORE_SOURCES CONFIGURE_DEPENDS
   ${CMAKE_CURRENT_SOURCE_DIR}/src/app/*.cpp
