Set QUIET_MODE default to OFF in CMake config
Changed the default value of QUIET_MODE from ON to OFF in CMakeLists.txt to allow serial/MIDI chatter for host builds by default.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ FetchContent_MakeAvailable(ArduinoJson)
 option(SEEDBOX_HW "Toggle Teensy-specific hardware paths" OFF)
 option(SEEDBOX_SIM "Enable simulator-friendly shims" ON)
 option(SEEDBOX_JUCE "Mark this build as JUCE-driven" ON)
-option(QUIET_MODE "Mute serial/MIDI chatter for host builds" ON)
+option(QUIET_MODE "Mute serial/MIDI chatter for host builds" OFF)
 option(SEED_PRIME_BYPASS "Skip auto-priming four seeds; only focus slot fills" OFF)
 option(ENABLE_GOLDEN "Enable golden artifact emission" OFF)
 option(SEEDBOX_DEBUG_CLOCK_SOURCE "Verbose clock debug toggles" OFF)
