Let CI inherit JUCE quiet mode default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ option(QUIET_MODE "Mute serial/MIDI chatter for host builds" OFF)
 option(SEED_PRIME_BYPASS "Skip auto-priming four seeds; only focus slot fills" OFF)
 option(ENABLE_GOLDEN "Enable golden artifact emission" OFF)
 option(SEEDBOX_DEBUG_CLOCK_SOURCE "Verbose clock debug toggles" OFF)
-option(SEEDBOX_DEBUG_UI "Verbose UI debug toggles" ON)
+option(SEEDBOX_DEBUG_UI "Verbose UI debug toggles" OFF)
 option(ARDUINOJSON_USE_DOUBLE "Match PlatformIO's double-precision JSON" ON)
 set(SEEDBOX_PROJECT_ROOT_HINT "${CMAKE_SOURCE_DIR}" CACHE STRING "Optional path hint for test/fixture lookups")
 set(SEEDBOX_VERSION "dev" CACHE STRING "Version stamp applied to JUCE targets")
